--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -1,24 +1,105 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13178.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13156.2"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Reveal View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SWRevealViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <segue destination="K1X-ap-auJ" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="Jgs-l2-Hsa"/>
+                        <segue destination="ysr-z1-FhG" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="2e3-io-rwc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="7" y="167"/>
+        </scene>
+        <!--ChatVC-->
+        <scene sceneID="pp3-wi-HHe">
+            <objects>
+                <viewController id="ysr-z1-FhG" customClass="ChatVC" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gqZ-io-kJC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S0y-Xq-7A9">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Smack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mN7-JB-XLj">
+                                        <rect key="frame" x="161" y="45.5" width="52" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KN8-sC-9Re">
+                                        <rect key="frame" x="12" y="47" width="24" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="24" id="QFL-ir-5Tf"/>
+                                            <constraint firstAttribute="height" constant="18" id="QfX-PK-3t1"/>
+                                        </constraints>
+                                        <state key="normal" image="smackBurger"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.29019607843137252" green="0.30196078431372547" blue="0.84705882352941175" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="KN8-sC-9Re" firstAttribute="leading" secondItem="S0y-Xq-7A9" secondAttribute="leading" constant="12" id="1ql-UD-otU"/>
+                                    <constraint firstItem="mN7-JB-XLj" firstAttribute="centerX" secondItem="S0y-Xq-7A9" secondAttribute="centerX" id="EMf-5X-QpW"/>
+                                    <constraint firstItem="mN7-JB-XLj" firstAttribute="centerY" secondItem="KN8-sC-9Re" secondAttribute="centerY" id="UEE-Eo-3iz"/>
+                                    <constraint firstAttribute="height" constant="77" id="VqI-St-B0s"/>
+                                    <constraint firstAttribute="bottom" secondItem="KN8-sC-9Re" secondAttribute="bottom" constant="12" id="xYT-b5-NNa"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="S0y-Xq-7A9" firstAttribute="trailing" secondItem="Wmd-7c-C5O" secondAttribute="trailing" id="KcA-aN-HTb"/>
+                            <constraint firstItem="S0y-Xq-7A9" firstAttribute="leading" secondItem="Wmd-7c-C5O" secondAttribute="leading" id="TeA-gk-ZjS"/>
+                            <constraint firstItem="S0y-Xq-7A9" firstAttribute="top" secondItem="gqZ-io-kJC" secondAttribute="top" id="apd-TH-FMv"/>
+                            <constraint firstItem="S0y-Xq-7A9" firstAttribute="top" secondItem="gqZ-io-kJC" secondAttribute="top" id="hnD-7e-iwd"/>
+                            <constraint firstItem="S0y-Xq-7A9" firstAttribute="trailing" secondItem="Wmd-7c-C5O" secondAttribute="trailing" id="rW7-mI-bKQ"/>
+                            <constraint firstItem="S0y-Xq-7A9" firstAttribute="leading" secondItem="Wmd-7c-C5O" secondAttribute="leading" id="wup-Dx-gO4"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Wmd-7c-C5O"/>
+                    </view>
+                    <connections>
+                        <outlet property="menuBtn" destination="KN8-sC-9Re" id="GOr-T6-qFn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RjJ-DC-QXh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="789.60000000000002" y="503.29835082458777"/>
+        </scene>
+        <!--ChannelVC-->
+        <scene sceneID="mg1-Wm-auK">
+            <objects>
+                <viewController id="K1X-ap-auJ" customClass="ChannelVC" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5pH-rk-ew1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="ec1-tA-X7O"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jFV-22-Hil" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="791" y="-166"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="smackBurger" width="40" height="40"/>
+    </resources>
 </document>
