--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -122,7 +122,7 @@
                                     <action selector="loginBtnPressed:" destination="K1X-ap-auJ" eventType="touchUpInside" id="1Db-xH-mCh"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="yNe-n7-fnl">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="yNe-n7-fnl" customClass="CircleImage" customModule="Smack" customModuleProvider="target">
                                 <rect key="frame" x="16" y="576" width="75" height="75"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="75" id="Zp5-zx-ZS8"/>
@@ -421,7 +421,7 @@
                                 <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="Les-ZU-7mM">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="Les-ZU-7mM" customClass="CircleImage" customModule="Smack" customModuleProvider="target">
                                 <rect key="frame" x="137" y="299" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="2dc-CK-bDH"/>
@@ -457,17 +457,23 @@
                                     <action selector="pickBGColorPressed:" destination="WH8-7T-baE" eventType="touchUpInside" id="so3-UJ-AR5"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="F1b-00-l8p">
+                                <rect key="frame" x="169" y="215" width="37" height="37"/>
+                                <color key="color" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="swv-MC-KOs" firstAttribute="top" secondItem="Les-ZU-7mM" secondAttribute="top" id="14g-Xr-1z6"/>
                             <constraint firstItem="TWf-45-zsb" firstAttribute="top" secondItem="P5a-v5-XmQ" secondAttribute="top" constant="40" id="9OR-Ym-zth"/>
                             <constraint firstItem="XP9-7U-gND" firstAttribute="centerX" secondItem="9Le-2d-5kQ" secondAttribute="centerX" id="9dD-6i-MV4"/>
+                            <constraint firstItem="F1b-00-l8p" firstAttribute="centerY" secondItem="9Le-2d-5kQ" secondAttribute="centerY" constant="-100" id="Adw-dC-edY"/>
                             <constraint firstItem="Lzq-Tv-J0r" firstAttribute="top" secondItem="TWf-45-zsb" secondAttribute="bottom" constant="40" id="HB9-60-xmv"/>
                             <constraint firstItem="rDp-BW-Faq" firstAttribute="centerX" secondItem="9Le-2d-5kQ" secondAttribute="centerX" id="J3h-Ko-fl7"/>
                             <constraint firstItem="Les-ZU-7mM" firstAttribute="centerX" secondItem="9Le-2d-5kQ" secondAttribute="centerX" id="LJl-2U-QMp"/>
                             <constraint firstItem="swv-MC-KOs" firstAttribute="centerX" secondItem="9Le-2d-5kQ" secondAttribute="centerX" id="O8u-wr-BA0"/>
                             <constraint firstItem="Les-ZU-7mM" firstAttribute="top" secondItem="Lzq-Tv-J0r" secondAttribute="bottom" constant="40" id="Pq4-KX-NuJ"/>
+                            <constraint firstItem="F1b-00-l8p" firstAttribute="centerX" secondItem="9Le-2d-5kQ" secondAttribute="centerX" id="a2c-yN-s20"/>
                             <constraint firstItem="P5a-v5-XmQ" firstAttribute="bottom" secondItem="rDp-BW-Faq" secondAttribute="bottom" constant="20" id="blX-54-il7"/>
                             <constraint firstItem="XP9-7U-gND" firstAttribute="top" secondItem="swv-MC-KOs" secondAttribute="bottom" constant="4" id="jnX-NO-HM1"/>
                             <constraint firstItem="TWf-45-zsb" firstAttribute="centerX" secondItem="9Le-2d-5kQ" secondAttribute="centerX" id="tbX-kF-K04"/>
@@ -479,6 +485,7 @@
                     <connections>
                         <outlet property="emailTxt" destination="yq7-FJ-1Pb" id="SGe-yb-efL"/>
                         <outlet property="passTxt" destination="Ccq-Dw-tIq" id="ibn-pO-gLq"/>
+                        <outlet property="spinner" destination="F1b-00-l8p" id="phG-1V-90w"/>
                         <outlet property="userImg" destination="Les-ZU-7mM" id="QMy-Di-eW5"/>
                         <outlet property="usernameTxt" destination="Eur-HJ-oGk" id="lfi-1a-YCF"/>
                         <segue destination="XFd-Cb-5VV" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="Dsr-8J-91Z"/>
