--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -133,7 +133,7 @@
                                 <rect key="frame" x="0.0" y="125" width="375" height="431"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ua9-GP-JOa">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="channelCell" id="ua9-GP-JOa" customClass="ChannelCell" customModule="Smack" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ua9-GP-JOa" id="UeR-G4-ILe">
@@ -153,6 +153,9 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="channelName" destination="Yo7-gf-qSs" id="IbE-8V-W1o"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -188,6 +191,7 @@
                     </view>
                     <connections>
                         <outlet property="loginBtn" destination="JIw-QP-gjG" id="bUO-FJ-Vi6"/>
+                        <outlet property="tableView" destination="Zau-eY-PnN" id="1go-vU-H1m"/>
                         <outlet property="userImg" destination="yNe-n7-fnl" id="ate-dw-j6p"/>
                         <segue destination="mJF-Lp-V51" kind="show" identifier="toLogin" id="oSc-Ga-zbx"/>
                     </connections>
